# value_types

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CONTRIBUTING.md  DEVELOPMENT.md  DRAFT.md  DRAFT_COROLLARY.md  DRAFT_LWG_CONSTRAINTS.html  DRAFT_LWG_CONSTRAINTS.md  GEMINI.md  LICENSE.txt  LWG_ISSUE_000.md  LWG_ISSUE_4322.html  MODULE.bazel  P3019r4.html  README.md  WORKSPACE.bazel  allocator_test.cc  basic.cc  basic_test.py  cloning_ptr.h  cloning_ptr_test.cc  codecov.yml  copy_and_delete.h  feature_check.h  indirect.cc  indirect.h  indirect_benchmark.cc  indirect_consteval.cc  indirect_cxx14.cc  indirect_cxx14.h  indirect_gtest.cc  indirect_pimpl.cc  indirect_pimpl.h  (+29 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: bazel.yml  clang-format-check.yml  clang-tidy.yml  cmake.yml  code_coverage.yml  integrity_checks.yml  pre-commit.yml
agents/: Dockerfile
benchmarks/: BUILD.bazel  CMakeLists.txt  indirect_benchmark.cc  indirect_sorting_benchmark.cc  polymorphic_benchmark.cc
c++11/: indirect_11.h  polymorphic_11.h
cmake/: coverage.cmake  sanitizers.cmake  vt_add_library.cmake  vt_add_test.cmake  xyz_add_library.cmake  xyz_add_object_library.cmake  xyz_add_test.cmake
cmake/requirements/: coverage_requirements.txt
compatibility/: empty_base_optimization.h  feature_check.h  in_place_type.h  indirect_cxx11.h  polymorphic_cxx11.h  utility.h
compile_checks/: BUILD.bazel  CMakeLists.txt  indirect_as_member.cc  indirect_consteval.cc  indirect_in_variant.cc  indirect_pimpl.cc  indirect_pimpl.h  indirect_pimpl_use.cc  indirect_requirements.cc  polymorphic_as_member.cc  polymorphic_consteval.cc  polymorphic_in_variant.cc  polymorphic_pimpl.h  polymorphic_pimpl_use.cc  polymorphic_requirements.cc  wrapper.cc
docker/: Dockerfile
docs/: developer-guide.md
experimental/: indirect_valueless_compare.h  indirect_valueless_copy.h  indirect_valueless_copy_and_compare.h  polymorphic_inline_vtable.h  polymorphic_sbo.h
exploration/: BUILD.bazel  CMakeLists.txt  README.md  incomplete_types.cc  incomplete_types.h  recursive_variant.cc  recursive_variant.h  recursive_variant_test.cc  reference_wrappers_test.cc  traits_and_concepts.cc  wrapper.h
incomplete_types/: incomplete_types.cc  incomplete_types.h  incomplete_types_test.cc  wrapper.h
issues/: .gitignore  memory.tex  std.tex  styles.tex
markdown/: Dockerfile  README.md  _generate_pdf.docker.sh  docker-run.sh
presentations/: 2023-11-27-bsi-value-types.md  2025-02-10-hagenberg-lewg.md  2025-11-02-implicit-conversions.md  constraints_2025_01_29.md  value_types_2023_10_27.md  vocabulary_types_2023_11_8.md
proposals/: DRAFT_NO_IMPLICIT_CONVERSIONS.md
scripts/: bazel.sh  cmake.sh  gemini-sandbox.sh  ignore_edits_to.sh  reduce_compile_commands.py  setup-git-hooks.sh  to_pdf.sh
test_package/FetchContent/: CMakeLists.txt
test_package/find_package/: CMakeLists.txt
test_package/src/: main.cc
xyz/value_types/: feature_check.h  indirect.cc  indirect.h  indirect_cxx14.cc  indirect_cxx14.h  indirect_test.cc  polymorphic.cc  polymorphic.h  polymorphic_cxx14.cc  polymorphic_cxx14.h  polymorphic_no_vtable.cc  polymorphic_no_vtable.h  polymorphic_test.cc  tagged_allocator.h  test_helpers.h  tracking_allocator.h
