cc_library(
    name = "feature_check",
    hdrs = ["feature_check.h"],
    copts = ["-Iexternal/value_types/"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "indirect",
    hdrs = ["indirect.h"],
    copts = ["-Iexternal/value_types/"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "tagged_allocator",
    hdrs = ["tagged_allocator.h"],
)

cc_library(
    name = "tracking_allocator",
    hdrs = ["tracking_allocator.h"],
)

cc_library(
    name = "test_helpers",
    hdrs = ["test_helpers.h"],
)

cc_test(
    name = "indirect_test",
    size = "small",
    srcs = [
        "indirect_test.cc",
    ],
    deps = [
        "feature_check",
        "indirect",
        "tagged_allocator",
        "test_helpers",
        "tracking_allocator",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "polymorphic",
    hdrs = ["polymorphic.h"],
    copts = ["-Iexternal/value_types/"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "polymorphic_test",
    size = "small",
    srcs = [
        "polymorphic_test.cc",
    ],
    deps = [
        "feature_check",
        "polymorphic",
        "tagged_allocator",
        "test_helpers",
        "tracking_allocator",
        "@com_google_googletest//:gtest_main",
    ],
)
