load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "feature_check",
    hdrs = ["xyz/value_types/feature_check.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "indirect",
    srcs = ["xyz/value_types/indirect.cc"],
    hdrs = ["xyz/value_types/indirect.h"],
    visibility = ["//visibility:public"],
    deps = ["feature_check"],
)

cc_library(
    name = "tagged_allocator",
    hdrs = ["xyz/value_types/tagged_allocator.h"],
)

cc_library(
    name = "tracking_allocator",
    hdrs = ["xyz/value_types/tracking_allocator.h"],
)

cc_library(
    name = "test_helpers",
    hdrs = ["xyz/value_types/test_helpers.h"],
)

cc_test(
    name = "indirect_test",
    size = "small",
    srcs = ["xyz/value_types/indirect_test.cc"],
    deps = [
        "feature_check",
        "indirect",
        "tagged_allocator",
        "test_helpers",
        "tracking_allocator",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "indirect_cxx14",
    srcs = ["xyz/value_types/indirect_cxx14.cc"],
    hdrs = ["xyz/value_types/indirect_cxx14.h"],
    defines = ["XYZ_INDIRECT_CXX_14"],
    visibility = ["//visibility:public"],
    deps = ["feature_check"],
)

cc_test(
    name = "indirect_cxx17_test",
    size = "small",
    srcs = ["xyz/value_types/indirect_test.cc"],
    copts = ["-std=c++17"],
    deps = [
        "feature_check",
        "indirect_cxx14",
        "tagged_allocator",
        "test_helpers",
        "tracking_allocator",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "polymorphic",
    srcs = ["xyz/value_types/polymorphic.cc"],
    hdrs = ["xyz/value_types/polymorphic.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "polymorphic_test",
    size = "small",
    srcs = ["xyz/value_types/polymorphic_test.cc"],
    deps = [
        "feature_check",
        "polymorphic",
        "tagged_allocator",
        "test_helpers",
        "tracking_allocator",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "polymorphic_cxx14",
    srcs = ["xyz/value_types/polymorphic_cxx14.cc"],
    hdrs = ["xyz/value_types/polymorphic_cxx14.h"],
    defines = ["XYZ_POLYMORPHIC_CXX_14"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "polymorphic_cxx17_test",
    size = "small",
    srcs = ["xyz/value_types/polymorphic_test.cc"],
    copts = ["-std=c++17"],
    deps = [
        "feature_check",
        "polymorphic_cxx14",
        "tagged_allocator",
        "test_helpers",
        "tracking_allocator",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "polymorphic_no_vtable",
    srcs = ["xyz/value_types/polymorphic_no_vtable.cc"],
    hdrs = ["xyz/value_types/polymorphic_no_vtable.h"],
    defines = ["XYZ_POLYMORPHIC_NO_VTABLE"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "polymorphic_no_vtable_test",
    size = "small",
    srcs = ["xyz/value_types/polymorphic_test.cc"],
    deps = [
        "feature_check",
        "polymorphic_no_vtable",
        "tagged_allocator",
        "test_helpers",
        "tracking_allocator",
        "@com_google_googletest//:gtest_main",
    ],
)
