module(
    name = "xyz_value_types",
    version = "head",
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")

bazel_dep(
    name = "google_benchmark",
    version = "1.9.4",
    dev_dependency = True,
    repo_name = "com_github_google_benchmark",
)

bazel_dep(
    name = "googletest",
    version = "1.17.0",
    repo_name = "com_google_googletest",
)

# Use a git override as the latest stable version of googletest does not support bazel 9.0.
git_override(
    module_name = "googletest",
    branch = "main",
    remote = "https://github.com/google/googletest.git",
)

bazel_dep(
    name = "rules_cc",
    version = "0.2.14",
    repo_name = "rules_cc",
)
