load("@bazel_skylib//rules:build_test.bzl", "build_test")

cc_library(
    name = "indirect_requirements",
    srcs = ["indirect_requirements.cc"],
    visibility = ["//visibility:private"],
    deps = ["//:indirect"],
)

build_test(
    name = "indirect_requirements_build_test",
    targets = ["indirect_requirements"],
)

cc_library(
    name = "polymorphic_requirements",
    srcs = ["polymorphic_requirements.cc"],
    visibility = ["//visibility:private"],
    deps = ["//:polymorphic"],
)

build_test(
    name = "polymorphic_requirements_build_test",
    targets = ["polymorphic_requirements"],
)

cc_library(
    name = "indirect_consteval",
    srcs = ["indirect_consteval.cc"],
    visibility = ["//visibility:private"],
    deps = ["//:indirect"],
)

build_test(
    name = "indirect_consteval_build_test",
    targets = ["indirect_consteval"],
)

cc_library(
    name = "polymorphic_consteval",
    srcs = ["polymorphic_consteval.cc"],
    visibility = ["//visibility:private"],
    deps = ["//:polymorphic"],
)

build_test(
    name = "polymorphic_consteval_build_test",
    targets = ["polymorphic_consteval"],
)

cc_library(
    name = "indirect_pimpl",
    srcs = [
        "indirect_pimpl.cc",
        "indirect_pimpl_use.cc",
    ],
    hdrs = ["indirect_pimpl.h"],
    visibility = ["//visibility:private"],
    deps = ["//:indirect"],
)

build_test(
    name = "indirect_pimpl_build_test",
    targets = ["indirect_pimpl"],
)

cc_library(
    name = "polymorphic_pimpl",
    srcs = [
        "polymorphic_pimpl.cc",
        "polymorphic_pimpl_use.cc",
    ],
    hdrs = ["polymorphic_pimpl.h"],
    visibility = ["//visibility:private"],
    deps = ["//:polymorphic"],
)

build_test(
    name = "polymorphic_pimpl_build_test",
    targets = ["polymorphic_pimpl"],
)
