cc_library(
    name = "wrapper",
    hdrs = ["wrapper.h"]
)

cc_library(
    name = "incomplete_types",
    hdrs = ["incomplete_types.h"],
    srcs = ["incomplete_types.cc"],
    deps = ["wrapper"]
)

cc_test(
    name = "incomplete_types_test",
    srcs = ["incomplete_types_test.cc"],
    deps= [
        "incomplete_types",
        "@com_google_googletest//:gtest_main",
    ]
)
